_sass/common.scss
.intro-open{
  overflow: hidden;
  position: fixed;
  right: 0;
  left: 0;
}

.cd-intro {
  position: fixed;
  top: 48px;
  left: 0;
  height: 100vh;
  z-index: 5;
  width: 100%;
  display: table;
  background: $color-white;
  overflow: hidden;
  @include until($tablet) {
    top: 48px;
  }

  .cd-intro-content {
    display: flex;
    height: 100vh;
    justify-content: center;
    flex-wrap: nowrap;
    align-items: center;
    .block {
      background: #FFFFFFEE;
      border-radius: 2px;
      padding: 32px;
      width: 512px;
      margin-top: -48px;
      @include until($tablet) {
        width: auto;
        padding: 16px;
      }
    }
    .fixed-block{

      @media screen and (max-width: 375px){
        max-height: 65vh;
        overflow-y: auto;
      }
      @media screen and (max-height: 600px) {
        max-height: 50vh;
        overflow-y: auto;
      }
      @media screen and (max-height: 320px) {
        max-height: 30vh;
        overflow-y: auto;
      }
    }
    a {
      text-decoration: none;
    }
    p {
      margin-bottom: 0.7em;
      line-height: 1.4em;
    }

    .action-wrapper {
      background: $color-blue;
      color: $color-white;
      padding: 21px 20px;
      text-align: center;
      margin: 20px auto 0;
      position: relative;
      border-radius: 2px;
      &:hover{
        opacity: 0.8;
      }
    }

  }
}

header {
  background: $key-color;
  color: $color-white;
  a{
    color: $color-white;
		text-decoration: none;
  }
  .columns{
    margin: 0 !important;
    height: 48px;
    @include until($header-not-so-wide){
      height: 40px;
    }
    .column{
      display: flex;
      align-items: center;
      justify-content: flex-start;
      padding-bottom:0;
      padding-top:0;
      &.c3{
        justify-content: flex-end;
      }
    }
  }
  .c1 {
    flex-basis: auto;
    flex-grow: 0;
    margin-left: 16px;
    padding-left: 0;

    @include until($desktop){
      margin-left: 16px;
    }
    @include until($tablet){
      margin-left: 16px;
    }

  }
  .c2 {
    flex-basis: auto;
    flex-grow: 0;
    font-size: 16px;
    line-height: 0.99rem;
    padding-left: 13px;
    @include until($header-wide){
      display: none !important;
    }
    h2{
      line-height: 15px;
    }
  }
  .c3{
    flex-grow: 1;
    font-size: 20px;
    line-height: 0.99rem;
		padding: 0;
    padding-right: 8px;
    @include until($header-not-so-wide){
      padding-right: 16px;
    }
    .header-menu, #nav-toggle{
      @include from($header-not-so-wide){
        display: none;
      }
    }
    #nav-menu{
      @include until($header-not-so-wide){
        display: none;
      }
    }

    a{
      padding-left: 16px;
    }
  }
  .c4, .c5, .c6 {
    flex: 0 0 48px;
    padding: 0;
    @include until($header-not-so-wide){
      display: none !important;
    }
  }
  a.c4 {
    background-color: #4C77A6;
  }
  a.c5 {
    background-color: #1FB8EA;
  }
  a.c6 {
    background-color: #435695;
  }
  .icon {
    color:$color-white;
    font-size:24px;
  }
  .icon.is-large{
    height: 48px;
    width: 48px;
  }
  .header-menu{
    display: none;
    position: absolute;
    top:40px;
    right: 0px;
    z-index: 20;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    background: $color-blue;
    &.is-visible{
      display: block;
    }
    li{
      &:hover{
        opacity: 0.8;
      }
      a{
        display: inline-block;
        padding: 1em;
        width: 100%;
        text-decoration: none;
      }
    }
  }
}

.hero-head{
  #nav-menu{
    display: inline-flex;
    //line-height: 48px;
  }
  #nav-toggle{
    //margin-bottom: -0.25rem;
  }
  .is-visible-small{
    display: none;
  }
  @include until($tablet){
    .is-visible-small{
      visibility: visible;
      display: inline-flex;
    }
  }
  @include from($tablet){
    #nav-menu.is-visible-small.is-hidden{
      visibility: visible;
      display: inherit !important;
    }
  }
  #header-title{
    gap: 10.5px;

    img.no-logo{
			display: none;
		}
		@include until($mobile) { 
			img.no-logo{
				display: inline-block;
			}
			img.logo{
				display: none;
			}
		}

    a {
      display: flex;
    }

    .selector-control {
      display: flex;
      flex-direction: column;
      height: 36px;
      position: relative;
      z-index: 100;
      overflow: hidden;
      cursor: pointer;
      user-select: none;
      border-radius: 4px;
      outline: none;

      &:focus, &:focus-visible {
        overflow: visible;

        .selector-list {
          pointer-events: all;
        }
      }

      &::after {
        content: '';
        position: absolute;
        pointer-events: none;
        width: 10px;
        height: 100%;
        display: block;
        right: 7px;
        background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMTAiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0ibTEgMyA0IDQgNC00IiBzdHJva2U9IiNmZmYiIHN0cm9rZS13aWR0aD0iMS41Ii8+PC9zdmc+') no-repeat center;
      }

      .selector-list {
        display: flex;
        flex-direction: column;
        flex: 0 0 auto;
        border-radius: 4px;
        overflow: hidden;
        pointer-events: none;
      }

      a {
        display: flex;
        align-items: center;
        padding: 0 20px 0 10px;
        flex: 0 0 36px;
        box-shadow: inset 0px 4px 4px rgba(10, 10, 10, 0.15);

        &:hover {
          opacity: 1;
        }

        &.selected {
          pointer-events: none;
        }

        &.item-sf {
          background-color: $color-orange;
          order: 3;

          &.selected {
            order: 0;

            &, &:hover {
              background-color: $color-orange-muted;
            }
          }
        }

        &.item-duma-7 {
          background-color: $color-blue;
          order: 2;

          &.selected {
            order: 0;

            &, &:hover {
              background-color: $color-blue-muted;
            }
          }
        }

        &.item-duma-8 {
          background-color: $color-dark-blue;
          order: 1;

          &.selected {
            order: 0;

            &, &:hover {
              background-color: $color-dark-blue-muted;
            }
          }
        }

        img {
          height: auto;
        }
      }

      @include until($header-not-so-wide){
        height: 30px;

        a {
          flex: 0 0 30px;
        }
      }
    }
  }
}

.columns.about{
  //font-family: $font-legible;
  font-size: 20px;
  padding: 80px 16px 16px 0px;
  margin-bottom: 1px;
  max-width: 1280px;
  margin: 0 auto;
  @include until($desktop){
    padding: 40px 16px 32px 16px;
  }
  @include until($tablet) {
    flex-direction: column-reverse;
    display: flex;
    padding: 40px 8px 16px 8px;
  }
  .aside{
    @include from($desktop) {
      padding-left: 235px;
      padding-right: 24px;
    }
    @include until($tablet) {
      padding: 8px;
    }
  }

  .about-menu{
    width: 235px;
    top:16px;
    position: -webkit-sticky;
    position: sticky;
    @include until($tablet) {
      width: auto;
    }
    @include  from($tablet){
      margin-top: 2.5em;
    }
  }



  .about-section:not(:last-of-type){
    padding-bottom: 4em;
  }
  h1{
    font-size: 32px;
    margin-bottom: 16px;
    font-weight: bold;
  }
  h2,h3{
    font-weight: bold;
    text-transform: uppercase;
    margin-top: 1.2em;
    margin-bottom: 0.6em;
  }
  li{
    margin-bottom: 16px;
  }
  p{
    margin-bottom: 0.6em;
    line-height: 1.2em;
  }
  ol{
    padding-left: 1em;
  }
  a, a:hover{
    color: $color-blue;
    text-decoration: none;
  }
  .active a{
    color: $color-black;

  }

}

#scrollToTop {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  border: none;
  outline: none;
  background-color: $color-blue;
  color: white;
  cursor: pointer;
  padding: 9px 17px 11px 17px;
  border-radius: 25px;
  font-size: 18px;
  opacity: 0.6;
  &:hover {
    opacity: 0.8;
  }
}

.outer_link{
  display: inline-block;
  padding: 4px 8px 3px 8px;
  font-size: 16px;
  line-height: 20px;
  background: rgba(47, 163, 228, 0.1);
  border-radius: 2px;
  color: #2fa3e4;
  text-decoration: none;
}

